<resources>
<!--  quiz_start  -->
    <string name="app_name">QuizApp</string>
    <string name="quiz_title">Quiz</string>
    <string name="get_started_title">Get Started</string>
    <string name="name_field">Your Name</string>
    <string name="player_name_label_text">The name of the player is:</string>
    <string name="choose_contact_button_text">Choose contact</string>

<!--  quiz_body  -->
    <string name="next_question">Next</string>
    <string name="question_placeholder">Question Placeholder</string>

<!--  quiz_end  -->
    <string name="question_result_text">Quiz Result</string>
    <string name="restart_quiz">Restart Quiz</string>

<!--  quiz_end  -->
    <string name="settings_name">User Name:</string>
    <string name="settings_name_placeholder">Type your name</string>
    <string name="settings_button_save">Save</string>

<!--  recycle_view list_item  -->
    <string name="li_question">Question placeholder</string>
    <string name="li_answer">Answer placeholder</string>
    <string name="li_details">Details</string>
    <string name="li_delete">Delete</string>

<!--  question_add  -->
    <string name="qa_question">Question placeholder</string>
    <string name="qa_answer_title">Answers</string>
    <string name="qa_correct_answer">Correct Answer</string>
    <string name="qa_answer">Answer</string>
    <string name="qa_add_answer">Add Question</string>

</resources>