<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/question_item_shape">


        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/li_question"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text"
            android:layout_marginTop="6dp"
            android:text="@string/li_answer"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_text"
            android:layout_marginTop="25dp"
            android:text="@string/li_details"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_text"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/button4"
            android:minHeight="48dp"
            android:text="@string/li_delete"
            android:textColor="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>